test_dev/qasm/syntax_errors/e41.qasm
// bad barrier, bad arguments

barrier 1;
